cuadrado mas loco

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Movelo, cambialé el color y tamaño con el teclado:</h1>
     <div><div class="cuadrado"></div></div>
   </body>
 </html>
